@@ -14,6 +14,9 @@ Version 10     Live Server Fixes
 --Fixed other game list on waiting screen to ignore games that are ending due
   to players leaving.
 
+--Finally found and fixed the DENIED BY SERVER bug during wait_move.  Server
+  is now more robust when dealing with unexpected player request orderings.
+
 
 
 
